cmake_minimum_required(VERSION 3.6)
project(frosty)

set(CMAKE_CXX_STANDARD 14)

find_package(JNI REQUIRED)

INCLUDE(FindPkgConfig)
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)

set(SOURCE_FILES src/native/cpp/library.cpp src/native/cpp/library.h)
set(CMAKE_CXX_FLAGS ${SDL_CFLAGS} -pthread)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build)

include_directories(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS} ${JNI_INCLUDE_DIRS})
link_libraries(${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES} ${JNI_LIBRARIES})

add_library(frosty SHARED ${SOURCE_FILES})
